tests/ValidProofs/arrowE.fitch
|x
|x → y
|---
|y (→E) 1,2