tests/InvalidRules/conjI%3.fitch
|P(x)
|Q(y)
|---
|P(x) ∧ Q(y) (∧I) 2,1
